# utide-gpu

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: pre-commit.yml  pypi.yml  tests.yml
examples/: gpu_batch_grid.py  gpu_batch_real.py  noaa_validation.py  real_station.py
examples/data/: README.md  noaa_harcon.json  noaa_hourly_2023.npz
gpu_work/: README.md  bench_basis_fp32.py  bench_cpu.py  bench_gpu.py  bench_precision.py  build_notebook.py  build_real_batch_notebook.py  build_real_notebook.py  characteristics_proof.py  fetch_harcon.py  fetch_noaa.py  harmonics_xp.py  micro_fp32.py  normal_eq_test.py  profile_perf.py  robust_scale.py  solver_speed.py  validate_chunk.py  validate_gappy.py  validate_gpu.py  validate_many.py  validate_real.py  validate_robust.py
notebooks/: gpu_batch_example.ipynb  gpu_batch_real_example.ipynb  real_station_example.ipynb
tests/: test_characteristics.py  test_gpu.py  test_noaa_validation.py  test_robustfit.py  test_solve_many.py
utide/: __init__.py  _backend.py  _harmonics_xp.py  _reconstruct.py  _solve.py  characteristics.py  robustfit.py
